# systemint_2023

./: LICENSE  README.md
00_miscellanous/: stripeiframe.html
01_modules/html_module/: index.html  index.js
01_modules/html_no_module/: index.html  index.js
01_modules/node_commonjs/: index.js  myModule.js
01_modules/python/: main.py
02_data_formats/homework/csv/: package-lock.json  parsecsv.js  parsecsv.py
02_data_formats/homework/json/: me.json  parsejson.js  parsejson.py
02_data_formats/homework/txt/: me.txt  parsetxt.js  parsetxt.py
03_python_env/pipenv/: main.py  requirements.txt
03_python_env/virtualenv/: main.py
04_basic_servers/files/: me.csv  me.json  me.txt  me3.txt
04_basic_servers/node/: app.js  package-lock.json  package.json
04_basic_servers/python/: data.json  main.py  pyproject.toml
06_server_to_server/node/: app.js
06_server_to_server/python/: main.py  pyproject.toml
07_env/node/: index.js  package.json
07_env/python/: main.py  pyproject.toml
09_OpenAPI/node/: app.js  package-lock.json  package.json
09_OpenAPI/python/: main.py  pyproject.toml
12_server-sent_events/homework/: app.js  eventSource.js  package.json
12_server-sent_events/node/: app.js
12_server-sent_events/python/: main.py  pyproject.toml
13_github_webhooks/node/: app.js
13_github_webhooks/python/: main.py  pyproject.toml
13_github_webhooks/ruby/: about.md  app.rb
14_Azure_Functions/PythonHttpTrigger/: __init__.py
15_websockets/node/: client.js  index.html  server.js
15_websockets/python/: main.py  pyproject.toml
15_websockets/websockets_example/: client.js  package-lock.json  package.json  server.js
16_CORS/: index.html
16_CORS/node/: app.js  package-lock.json  package.json
16_CORS/python/: main.py  pyproject.toml
18_redis/basic_example/: main.py
18_redis/node/: index.js  package.json
18_redis/pubsub_example/: main.py
18_redis/python/task_queues/: pyproject.toml
19_Web_scraping/mandatory2_part2/: movies.db  pyproject.toml  web_scraper.py
19_Web_scraping/python/1_data_scraper/: data_scraper.py  pyproject.toml
19_Web_scraping/python/2._web_crawler/: pyproject.toml  web_crawler.py
19_Web_scraping/python/3._Scrapy_basic/: my_spider.py  pyproject.toml
20._graphql/graphql_assignment/: app.js  package-lock.json  package.json  schema.graphql
20._graphql/node/: index.js  package.json
21._sqllite/node/: index.js
file_upload/: app.js  package-lock.json  package.json  script.js
file_upload/public/: index.html
mandatory1_part2/exposee/: app.js  package-lock.json  package.json  register.js  registered_endpoints.txt  webhooks.js
mandatory1_part2/intergrator/: app.js  package-lock.json  package.json
mandatory2_part1/: app.js  package-lock.json  package.json
mandatory2_part1/views/: dashboard.ejs  login.ejs  signup.ejs
sms_service/python/: main.py
(+23 files in other folders)
