[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Anders Latif <andl@kea.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20.0"
fastapi = "^0.92.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
