[tool.poetry]
name = "1-data-scraper"
version = "0.1.0"
description = ""
authors = ["maja669e <maja669e@stud.kea.dk>"]
readme = "README.md"
packages = [{include = "1_data_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
